week12topic2/sg.tf
# security group
resource "aws_security_group" "sg" {
  name        = "jenkins-sg"
  description = "Allow traffic on port 22 ans 8080"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "22 for ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    description = "80 for http"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name       = "jenkins-sg"
    Env        = "dev"
    Team       = "DevOps"
    created-by = "Emmanuel"
  }
}
